# degiro_portfolio

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_REVIEW_HARDCODED_VALUES.md  CONFIGURATION.md  PRICING_NOTES.md  README.md  TICKER_RESOLUTION.md  USAGE.md  degiro-portfolio  degiro_portfolio  example_data.xlsx  pyproject.toml  stockchart.db.backup  tasks.py  test_server.py
.github/workflows/: ci.yml  publish.yml
docs/: advanced-setup.md  conf.py  data-providers.md  developer-appendix.md  features.md  getting-started.md  index.md  release-notes.md
src/degiro_portfolio/: __init__.py  __main__.py  config.py  database.py  desktop.py  fetch_indices.py  fetch_prices.py  import_data.py  main.py  price_fetchers.py  ticker_resolver.py
src/degiro_portfolio/static/: index.html  index.html.backup
tests/: README.md  conftest.py  degiro_dutch.xlsx  test_api_endpoints.py  test_config_unit.py  test_desktop_unit.py  test_e2e_csv_import.py  test_e2e_dutch_import.py  test_fetch_prices_unit.py  test_import_data_unit.py  test_interactive_features.py  test_main_unit.py  test_portfolio_overview.py  test_price_fetchers_unit.py  test_stock_charts.py  test_ticker_resolver_unit.py
